// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationsList matches the last snapshot 1`] = `
<View>
  <RCTScrollView
    data={
      Array [
        Object {
          "activityId": "1",
          "actor": Object {
            "avatarUrl": "https://wombat.com",
            "name": "Wombat McAardvark",
          },
          "avatarSeparator": false,
          "createdAt": "2 min ago",
          "id": "1",
          "onPress": [MockFunction],
          "unread": false,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <View>
                  <Image
                    source={
                      Object {
                        "uri": "https://wombat.com",
                      }
                    }
                  />
                </View>
              </View>
              <View>
                <Text
                  numberOfLines={2}
                >
                  <Text />
                </Text>
                <Text
                  numberOfLines={2}
                >
                  <Text>
                    Wombat 
                  </Text>
                </Text>
                <Text>
                  2 min ago
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`NotificationsList matches the last snapshot for NotificationRow 1`] = `
<View>
  <TouchableOpacity
    onPress={[Function]}
  >
    <NotificationCard
      notification={
        Object {
          "activityId": "1",
          "actor": Object {
            "avatarUrl": "https://wombat.com",
            "name": "Wombat McAardvark",
          },
          "avatarSeparator": false,
          "createdAt": "2 min ago",
          "id": "1",
          "onPress": [MockFunction],
          "unread": false,
        }
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`NotificationsList matches the renders CreateGroupNotice if user does not have memberships 1`] = `
<View>
  <Text>
    No notifications here, try creating your own Group!
  </Text>
  <Image
    source={
      Object {
        "testUri": "../../../assets/hey-axolotl.png",
      }
    }
  />
  <View>
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View>
        <View>
          <Text>
            Start a Group
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
